--- a/nginx/react.conf
+++ b/nginx/react.conf
@@ -4,17 +4,25 @@
 # For example, in this case, I copied my build file in the  /home/ubuntu/app-deploy/build directory.
 # Since a React project is built of static files that only need a browser, you don’t have to configure any further server-side language. 
 ################# Instructions  #################
-
 server {
-  listen 80;
-  listen [::]:80;
-  root /home/ubuntu/app-deploy/build;
-  location  /app {
-   try_files $uri $uri/ /index.html;
-  }
+        listen 80 default_server;
+        server_name ec2-3-93-4-5.compute-1.amazonaws.com;
+
+        return 301 https://$server_name$request_uri;
 }
 
+server {
+        listen 443 ssl default_server;
+        root /home/ubuntu/react-app-expressjs-nginx/build;
 
+        include /etc/nginx/snippets/self-signed.conf;
+        include snippets/ssl-params.conf;
 
+        index index.html;
 
+        server_name ec2-3-93-4-5.compute-1.amazonaws.com;
 
+        location / {
+                try_files $uri $uri/ /index.html;
+        }
+}
