Login & Home page routes
- Setup router links for login and home pages

Author:    KylePancamo <kyle.pancamo@gmail.com>

--- a/nginx/react.conf
+++ b/nginx/react.conf
@@ -6,6 +6,7 @@
 ################# Instructions  #################
 server {
         listen 80 default_server;
+	listen [::]:80 default_server;
 	root /home/ubuntu/react-app-expressjs-nginx/build;
         server_name ec2-3-93-4-5.compute-1.amazonaws.com;
 	
@@ -13,5 +14,18 @@ server {
 
 	location / {
                 try_files $uri $uri/ /index.html;
+        }
+
+	 location /create {
+                proxy_http_version 1.1;
+                proxy_cache_bypass $http_upgrade;
+
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;                proxy_set_header X-Forwarded-Proto $scheme;
+
+                proxy_pass http://3.93.4.5:5000;
         }
 }
