--- a/nginx/expressjs.conf
+++ b/nginx/expressjs.conf
@@ -1,13 +1,17 @@
-server{
-	location /create {
-		proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://3.93.4.5:5000;
-    proxy_set_header Host $http_host;
-    proxy_cache_bypass $http_upgrade;
-    proxy_redirect off;
-	}
-}
+#server{
+#	listen 80;
+#	location /create {
+#                proxy_http_version 1.1;
+#                proxy_cache_bypass $http_upgrade;
+#
+#                proxy_set_header Upgrade $http_upgrade;
+#                proxy_set_header Connection 'upgrade';
+#                proxy_set_header Host $host;
+#                proxy_set_header X-Real-IP $remote_addr;
+#                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;                proxy_set_header X-Forwarded-Proto $scheme;
+#
+#                proxy_pass http://3.93.4.5:5000;
+#        }	
+#}
 
 ###### http:example.com/app/users --> http://localhost:5000/users
