--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
