--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.26.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "font-awesome": "^4.7.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
